# mypy-stubs

./: .gitignore  LICENSE  README.md  pyproject.toml
src/airflow/: __init__.pyi  default_login.pyi  logging_config.pyi
src/airflow-stubs/: configuration.pyi  exceptions.pyi
src/airflow-stubs/config_templates/: default_webserver_config.pyi
src/airflow-stubs/example_dags/: example_bash_operator.pyi  example_kubernetes_executor_config.pyi  example_nested_branch_dag.pyi  example_pig_operator.pyi  example_trigger_controller_dag.pyi  test_utils.pyi
src/airflow-stubs/executors/: __init__.pyi  base_executor.pyi  dask_executor.pyi
src/airflow-stubs/hooks/: S3_hook.pyi  docker_hook.pyi  http_hook.pyi  mssql_hook.pyi  postgres_hook.pyi  samba_hook.pyi  slack_hook.pyi
src/airflow-stubs/jobs/: __init__.pyi
src/airflow-stubs/kubernetes/: kube_client.pyi  pod_runtime_info_env.pyi  volume_mount.pyi
src/airflow-stubs/models/: base.pyi  baseoperator.pyi  chart.pyi  dagrun.pyi  renderedtifields.pyi  (+2 more)
src/avro-stubs/: datafile.pyi
src/bugsnag/: client.pyi  legacy.pyi
src/bugsnag-stubs/: __init__.pyi
src/geoalchemy2/: shape.pyi  types.pyi
src/geoalchemy2-stubs/: __init__.pyi  elements.pyi
src/heroku3-stubs/: __init__.pyi  api.pyi  core.pyi  examples.pyi  helpers.pyi  rendezvous.pyi  structures.pyi
src/jsonschema-stubs/: __init__.pyi
src/kafka/: __init__.pyi
src/kafka-stubs/: errors.pyi
src/typing_vts/: airflow.py  shapely.py
stubs/airflow/: plugins_manager.pyi  sentry.pyi  settings.pyi
stubs/avro/: io.pyi  schema.pyi
stubs/regex/: __init__.pyi
(+539 files in other folders)
