[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "typeshed_vts"
version = "2022.04.04a"
description = ""
authors = []

packages = [
  { include = "typing_vts", from = "src" },

  { include = "airflow-stubs", from = "src" },
  { include = "avro-stubs", from = "src" },
  { include = "bugsnag-stubs", from = "src" },
  { include = "geoalchemy2-stubs", from = "src" },
  { include = "heroku3-stubs", from = "src" },
  { include = "jsonschema-stubs", from = "src" },
  { include = "kafka-stubs", from = "src" },
  { include = "regex-stubs", from = "src" },
  { include = "shapely-stubs", from = "src" },
]

[tool.poetry.dependencies]
types-backports = "^0.1.3"
typing-extensions = "^3.10.0"
